# industryERP

./: .dockerignore  .gitignore  DEPLOYMENT_STATUS.md  DESIGN.md  Dockerfile  PRODUCT.md  Procfile  README.md  alembic.ini  manual.docx  manual.md  package-lock.json  package.json  playwright.config.js  railway.json  requirements-dev.txt  requirements.txt  ruff.toml
.ai/: CHANGELOG.md  CONTEXT.md  DECISIONS.md  PRIMER.md
WebErpMesv2-WEM-2.0/: .gitignore  ARCHITECTURE.md  SECURITY.md  docker-compose.yml  dump.rdb  entrypoint.sh  package.json  phpunit.xml
ai-context/: codebase-recon-2026-06-24.md  index.md  qa-audit-2026-06-24.md
alembic/: env.py
backend_core/: alembic.ini
deploy/: azure-app-service.ps1  azure-update-existing.ps1  nginx.conf  start.sh
docs/: ARCHITECTURE_REVIEW.md
erpnext-docker/: README.md  docker-compose.yml
erpnext-docker/apps/steel_erp/: README.md  package.json  pyproject.toml
erpnext-docker/apps/steel_erp/steel_erp/events/: purchase_receipt.py  stock_entry.py
erpnext-docker/apps/steel_erp/steel_erp/overrides/: item.py
erpnext-docker/apps/steel_erp/steel_erp/utils/: __init__.py  jinja_methods.py  steel_calculations.py
kbsteel-main/: .gitignore  DEPLOYMENT_GUIDE.md  Procfile
kumar_frontend/: account-settings.html  bom.html  customer_add.html  customer_details.html  customer_edit.html  customers.html  dispatch.html  drawings.html  grn.html  index.html  instructions.html  instructions_edit.html  login.html  materials.html  notification-settings.html  queries.html  raw_material.html  register.html  reusable.html  scrap.html  (+6 more)
(+963 files in other folders)
